[gd_scene load_steps=3 format=3 uid="uid://cg457s3jk4ebw"]

[ext_resource type="Script" path="res://Scripts/menu.gd" id="1_t1gm4"]
[ext_resource type="AudioStream" uid="uid://dq7uxjtsu3qwm" path="res://Resources/Sounds/SFX/RotaryPhoneTick0.wav" id="2_ywp5j"]

[node name="ui_main_menu" type="CanvasLayer"]

[node name="main_menu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_t1gm4")

[node name="MarginContainer" type="MarginContainer" parent="main_menu"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -1148.0
offset_bottom = 101.0
grow_horizontal = 0
theme_override_constants/margin_left = 600
theme_override_constants/margin_top = 164
theme_override_constants/margin_right = 180
theme_override_constants/margin_bottom = 80

[node name="VBoxContainer" type="VBoxContainer" parent="main_menu/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="main_menu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 42
text = "Game Title Here"
horizontal_alignment = 1

[node name="Btn_Start" type="Button" parent="main_menu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Begin"

[node name="Btn_Settings" type="Button" parent="main_menu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="Btn_Exit" type="Button" parent="main_menu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Exit"

[node name="FadeToBlack" type="ColorRect" parent="main_menu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0)

[node name="FadeTimer" type="Timer" parent="main_menu"]
wait_time = 1.1
one_shot = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="main_menu"]
stream = ExtResource("2_ywp5j")

[connection signal="focus_entered" from="main_menu/MarginContainer/VBoxContainer/Btn_Start" to="main_menu" method="_on_btn_focus_entered"]
[connection signal="mouse_entered" from="main_menu/MarginContainer/VBoxContainer/Btn_Start" to="main_menu" method="_on_btn_focus_entered"]
[connection signal="pressed" from="main_menu/MarginContainer/VBoxContainer/Btn_Start" to="main_menu" method="_on_btn_start_pressed"]
[connection signal="focus_entered" from="main_menu/MarginContainer/VBoxContainer/Btn_Settings" to="main_menu" method="_on_btn_focus_entered"]
[connection signal="mouse_entered" from="main_menu/MarginContainer/VBoxContainer/Btn_Settings" to="main_menu" method="_on_btn_focus_entered"]
[connection signal="pressed" from="main_menu/MarginContainer/VBoxContainer/Btn_Settings" to="main_menu" method="_on_btn_settings_pressed"]
[connection signal="focus_entered" from="main_menu/MarginContainer/VBoxContainer/Btn_Exit" to="main_menu" method="_on_btn_focus_entered"]
[connection signal="mouse_entered" from="main_menu/MarginContainer/VBoxContainer/Btn_Exit" to="main_menu" method="_on_btn_focus_entered"]
[connection signal="pressed" from="main_menu/MarginContainer/VBoxContainer/Btn_Exit" to="main_menu" method="_on_btn_exit_pressed"]
[connection signal="timeout" from="main_menu/FadeTimer" to="main_menu" method="_on_fade_timer_timeout"]
